--- a/GeexLabSpout.vcxproj
+++ b/GeexLabSpout.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -23,33 +23,34 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>GeexLabSpout</RootNamespace>
     <ProjectName>GeexLabSpout</ProjectName>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -147,31 +148,33 @@
   <ItemGroup>
     <ClInclude Include="..\Spout.h" />
     <ClInclude Include="..\SpoutCommon.h" />
-    <ClInclude Include="..\SpoutControls.h" />
+    <ClInclude Include="..\SpoutCopy.h" />
     <ClInclude Include="..\SpoutDirectX.h" />
+    <ClInclude Include="..\SpoutFrameCount.h" />
     <ClInclude Include="..\SpoutGLDXinterop.h" />
     <ClInclude Include="..\SpoutGLextensions.h" />
     <ClInclude Include="..\SpoutMemoryShare.h" />
     <ClInclude Include="..\SpoutReceiver.h" />
     <ClInclude Include="..\SpoutSDK.h" />
     <ClInclude Include="..\SpoutSender.h" />
-    <ClInclude Include="..\SpoutSenderMemory.h" />
     <ClInclude Include="..\SpoutSenderNames.h" />
     <ClInclude Include="..\SpoutSharedMemory.h" />
+    <ClInclude Include="..\SpoutUtils.h" />
     <ClInclude Include="common.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\SpoutControls.cpp" />
+    <ClCompile Include="..\SpoutCopy.cpp" />
     <ClCompile Include="..\SpoutDirectX.cpp" />
+    <ClCompile Include="..\SpoutFrameCount.cpp" />
     <ClCompile Include="..\SpoutGLDXinterop.cpp" />
     <ClCompile Include="..\SpoutGLextensions.cpp" />
     <ClCompile Include="..\SpoutMemoryShare.cpp" />
     <ClCompile Include="..\SpoutReceiver.cpp" />
     <ClCompile Include="..\SpoutSDK.cpp" />
     <ClCompile Include="..\SpoutSender.cpp" />
-    <ClCompile Include="..\SpoutSenderMemory.cpp" />
     <ClCompile Include="..\SpoutSenderNames.cpp" />
     <ClCompile Include="..\SpoutSharedMemory.cpp" />
+    <ClCompile Include="..\SpoutUtils.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</CompileAsManaged>
@@ -186,9 +189,6 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
       </PrecompiledHeader>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="..\SpoutDirectX.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
