--- a/GeexLabSpout.vcxproj.filters
+++ b/GeexLabSpout.vcxproj.filters
@@ -23,7 +23,7 @@
     <ClInclude Include="..\SpoutCommon.h">
       <Filter>SpoutSDK</Filter>
     </ClInclude>
-    <ClInclude Include="..\SpoutControls.h">
+    <ClInclude Include="..\SpoutCopy.h">
       <Filter>SpoutSDK</Filter>
     </ClInclude>
     <ClInclude Include="..\SpoutDirectX.h">
@@ -47,13 +47,16 @@
     <ClInclude Include="..\SpoutSender.h">
       <Filter>SpoutSDK</Filter>
     </ClInclude>
-    <ClInclude Include="..\SpoutSenderMemory.h">
-      <Filter>SpoutSDK</Filter>
-    </ClInclude>
     <ClInclude Include="..\SpoutSenderNames.h">
       <Filter>SpoutSDK</Filter>
     </ClInclude>
     <ClInclude Include="..\SpoutSharedMemory.h">
+      <Filter>SpoutSDK</Filter>
+    </ClInclude>
+    <ClInclude Include="..\SpoutFrameCount.h">
+      <Filter>SpoutSDK</Filter>
+    </ClInclude>
+    <ClInclude Include="..\SpoutUtils.h">
       <Filter>SpoutSDK</Filter>
     </ClInclude>
   </ItemGroup>
@@ -61,7 +64,7 @@
     <ClCompile Include="dllmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\SpoutControls.cpp">
+    <ClCompile Include="..\SpoutCopy.cpp">
       <Filter>SpoutSDK</Filter>
     </ClCompile>
     <ClCompile Include="..\SpoutDirectX.cpp">
@@ -85,19 +88,17 @@
     <ClCompile Include="..\SpoutSender.cpp">
       <Filter>SpoutSDK</Filter>
     </ClCompile>
-    <ClCompile Include="..\SpoutSenderMemory.cpp">
-      <Filter>SpoutSDK</Filter>
-    </ClCompile>
     <ClCompile Include="..\SpoutSenderNames.cpp">
       <Filter>SpoutSDK</Filter>
     </ClCompile>
     <ClCompile Include="..\SpoutSharedMemory.cpp">
       <Filter>SpoutSDK</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="..\SpoutDirectX.ico">
+    <ClCompile Include="..\SpoutFrameCount.cpp">
       <Filter>SpoutSDK</Filter>
-    </Image>
+    </ClCompile>
+    <ClCompile Include="..\SpoutUtils.cpp">
+      <Filter>SpoutSDK</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
